# sql_server_agent

./: .gitignore  AGNO_FEATURES_REFERENCE.md  CLAUDE.md  agent_os.py  cli.py  main.py  pyproject.toml  requirements.txt
src/agent/: sql_agent.py
src/mcp/: server.py
